@@ -5,8 +5,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Iterator;
 import java.util.List;
@@ -21,6 +19,7 @@ import org.jabref.gui.LibraryTab;
 import org.jabref.gui.StateManager;
 import org.jabref.gui.actions.SimpleCommand;
 import org.jabref.gui.dialogs.BackupUIManager;
+import org.jabref.gui.menus.FileHistoryMenu;
 import org.jabref.gui.shared.SharedDatabaseUIManager;
 import org.jabref.gui.theme.ThemeManager;
 import org.jabref.gui.util.BackgroundTask;
@@ -46,7 +45,7 @@ public class OpenDatabaseAction extends SimpleCommand {
 
     // List of actions that may need to be called after opening the file. Such as
     // upgrade actions etc. that may depend on the JabRef version that wrote the file:
-    private static final List<GUIPostOpenAction> POST_OPEN_ACTIONS = Arrays.asList(
+    private static final List<GUIPostOpenAction> POST_OPEN_ACTIONS = List.of(
             // Migrations:
             // Warning for migrating the Review into the Comment field
             new MergeReviewIntoCommentAction(),
@@ -95,7 +94,7 @@ public class OpenDatabaseAction extends SimpleCommand {
                 .build();
 
         List<Path> filesToOpen = dialogService.showFileOpenDialogAndGetMultipleFiles(fileDialogConfiguration);
-        openFiles(filesToOpen, true);
+        openFiles(filesToOpen);
     }
 
     /**
@@ -111,20 +110,22 @@ public class OpenDatabaseAction extends SimpleCommand {
     }
 
     /**
-     * Opens the given file. If null or 404, nothing happens
+     * Opens the given file. If null or 404, nothing happens.
+     * In case the file is already opened, that panel is raised.
      *
      * @param file the file, may be null or not existing
      */
-    public void openFile(Path file, boolean raisePanel) {
-        openFiles(new ArrayList<>(List.of(file)), raisePanel);
+    public void openFile(Path file) {
+        openFiles(new ArrayList<>(List.of(file)));
     }
 
     /**
-     * Opens the given files. If one of it is null or 404, nothing happens
+     * Opens the given files. If one of it is null or 404, nothing happens.
+     * In case the file is already opened, that panel is raised.
      *
      * @param filesToOpen the filesToOpen, may be null or not existing
      */
-    public void openFiles(List<Path> filesToOpen, boolean raisePanel) {
+    public void openFiles(List<Path> filesToOpen) {
         LibraryTab toRaise = null;
         int initialCount = filesToOpen.size();
         int removed = 0;
@@ -152,16 +153,12 @@ public class OpenDatabaseAction extends SimpleCommand {
         // Run the actual open in a thread to prevent the program
         // locking until the file is loaded.
         if (!filesToOpen.isEmpty()) {
-            final List<Path> theFiles = Collections.unmodifiableList(filesToOpen);
-
-            for (Path theFile : theFiles) {
+            FileHistoryMenu fileHistory = frame.getFileHistory();
+            filesToOpen.forEach(theFile -> {
                 // This method will execute the concrete file opening and loading in a background thread
-                openTheFile(theFile, raisePanel);
-            }
-
-            for (Path theFile : theFiles) {
-                frame.getFileHistory().newFile(theFile);
-            }
+                openTheFile(theFile);
+                fileHistory.newFile(theFile);
+            });
         } else if (toRaise != null) {
             // If no files are remaining to open, this could mean that a file was
             // already open. If so, we may have to raise the correct tab:
@@ -170,9 +167,11 @@ public class OpenDatabaseAction extends SimpleCommand {
     }
 
     /**
-     * @param file the file, may be null or not existing
+     * This is the real file opening. Should be called via {@link #openFile(Path)}
+     *
+     * @param file the file, may be NOT null, but may not be existing
      */
-    private void openTheFile(Path file, boolean raisePanel) {
+    private void openTheFile(Path file) {
         Objects.requireNonNull(file);
         if (!Files.exists(file)) {
             return;
@@ -185,6 +184,10 @@ public class OpenDatabaseAction extends SimpleCommand {
         backgroundTask.onFinished(() -> trackOpenNewDatabase(newTab));
     }
 
+    /**
+     * This method is similar to {@link org.jabref.gui.JabRefGUI#openLastEditedDatabases()}.
+     * This method also has the capability to open remote shared databases
+     */
     private ParserResult loadDatabase(Path file) throws Exception {
         Path fileToLoad = file.toAbsolutePath();
 
